fix(publish): java8-safe persisted scoreboard cache IO (no Files.writeString)